<resources>
    <string name="app_name">No password for you</string>
    <string name="desc_spinner_dropdown" />
    <string name="generating_password">Generating Password....</string>
    <string name="regenerate_password">Regenerate password</string>
    <string name="custom_settings">Custom Settings</string>
    <string name="password_length">Password length</string>
    <string name="capital_letters">Capital letters</string>
    <string name="small_letters">small letters</string>
    <string name="special_symbols">Special Symbols</string>
    <string name="numbers">Numbers</string>
    <string name="lol">this is an alpha release of \'No password for you\' This version is not the final version of this app and it is solely made for debugging purpose only . \n You should not Enter any sensitive info while using this application or to test the application , as your data can be used for debugging purpose. \n If you have some problem regarding your data , contact me on my E-mail. \n Your contribution makes the open source more better , if you find any bug,crash , new features, secuirity leaks , or any other problem, you can submit it on Github issues or on my E-mail. \n the report must include your device info, steps to reproduce the error, Expected results, Actual result , Visual proof if possible (screenshot , recording , etc.),priority of error. \nContact me : Rudrapratapsinhchauhan1@gmail.com \nGithub: https://github.com/RudraOp9/no-password-for-you</string>
    <!--<string name="Faq_key">
        Q: What is Key ?
        \nA: key is used to protect your password.

        \n\nQ: why i have to create Key?
        \nA: To ensure password security key should be created , key is not stored in cloud to protect from breaches.

        \n\nQ: I am new to app ?
        \nA: If you are new user create an new key , and keep the image or print the image in an paper.(delete image if printing)

        \n\nQ: I am existing user and logged in on other device.
        \nA: you should choose to add key , that you used on previous device

        \n\nQ: I can't see my password !
        \nA: You may added wrong key, try adding other keys if you had them.

        \n\nQ: Who can see my password ?
        \nA: nobody can see your password , except you .The password is end to end encrypted , and cannot be seen by anyone including \'No password for you\'


    </string>-->
</resources>