<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".GeneratePass">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:padding="40dp"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView

            android:id="@+id/appCompatImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:padding="10dp"

            android:layout_marginEnd="30dp"
            android:background="@drawable/img_back"
            android:elevation="10dp"

            android:src="@drawable/img_pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passText"
            android:inputType="textVisiblePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:padding="10dp"
            android:text="@string/generating_password"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appCompatImageView"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/test"
            android:text="your test here"
            app:layout_constraintEnd_toEndOf="@+id/passText"
            app:layout_constraintStart_toStartOf="@+id/passText"
            app:layout_constraintTop_toBottomOf="@+id/passText" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toolsLayout"
            android:padding="10dp"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passText">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/regeneratePass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_back_2"
            android:padding="15dp"
            android:text="@string/regenerate_password"
            android:textSize="17sp"
             />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/copyPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/button_back_2"
            android:padding="15dp"
            app:srcCompat="@drawable/icon_copy_24" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_settings"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/customSetSwitch"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/customSetSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolsLayout" />

        <LinearLayout
            android:id="@+id/customSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:visibility="gone"
            android:padding="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_length"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text=""
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/capital_letters"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinnerCapLetter"
                    style="@style/Widget.AppCompat.TextView.SpinnerItem"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginEnd="20dp"
                    android:popupBackground="@drawable/spinner_dropdown_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/small_letters"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinnerSmallLetter"
                    style="@style/Widget.AppCompat.TextView.SpinnerItem"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginEnd="20dp"
                    android:popupBackground="@drawable/spinner_dropdown_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/special_symbols"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinnerSpecialSym"
                    style="@style/Widget.AppCompat.TextView.SpinnerItem"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginEnd="20dp"
                    android:popupBackground="@drawable/spinner_dropdown_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/numbers"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinnerNumbers"
                    style="@style/Widget.AppCompat.TextView.SpinnerItem"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginEnd="20dp"
                    android:popupBackground="@drawable/spinner_dropdown_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>